fix spacing

--- a/wp-content/themes/liquorlicenseadvisor/site.css
+++ b/wp-content/themes/liquorlicenseadvisor/site.css
@@ -181,7 +181,7 @@
 
 }
 #team-last {
-  height:100px;
+  height:150px;
 }
 
 #offpremise-licensing {
